k8s/pgsql-plat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pgsql-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: pgsql
    template:
        metadata:
            labels:
                app: pgsql
        spec:
            containers:
                -   name: pgsql
                    image: postgres
                    ports:
                        -   containerPort: 5432
                    volumeMounts:
                        -   mountPath: /var/lib/postgresql/data
                            name: pgsql-db
            volumes:
                -   name: pgsql-db
                    persistentVolumeClaim:
                        claimName: pgsql-claim
