k8s/commands-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: commands-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: commands-service
    template:
        metadata:
            labels:
                app: commands-service
        spec:
            containers:
                -   name: commands-service
                    image: dyrxx/commands-service
---
apiVersion: v1
kind: Service
metadata:
    name: commands-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        app: commands-service
    ports:
        -   name: commands-service
            port: 8080
            protocol: TCP
            targetPort: 8080
