k8s/pgsql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pgsql-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: pgsql
    template:
        metadata:
            labels:
                app: pgsql
        spec:
            containers:
                -   name: pgsql
                    image: postgres
                    ports:
                        -   containerPort: 5432
                    volumeMounts:
                        -   mountPath: /var/lib/postgresql/data
                            name: pgsql-db
            volumes:
                -   name: pgsql-db
                    persistentVolumeClaim:
                        claimName: pgsql-claim
---
apiVersion: v1
kind: Service
metadata:
    name: pgsql-cluster-ip-srv
spec:
    type: ClusterIP
    selector:
        app: pgsql
    ports:
        -   name: pgsql
            port: 5432
            protocol: TCP
            targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
    name: pgsql-load-balancer
spec:
    type: LoadBalancer
    selector:
        app: pgsql
    ports:
        -   port: 5432
            protocol: TCP
            targetPort: 5432
