k8s/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: platforms-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: platforms-service
    template:
        metadata:
            labels:
                app: platforms-service
        spec:
            containers:
                -   name: platforms-service
                    image: dyrxx/platforms-service
---
apiVersion: v1
kind: Service
metadata:
    name: platforms-cluster-ip-srv
spec:
    type: ClusterIP
    selector:
        app: platforms-service
    ports:
        -   name: RESTful
            port: 8080
            protocol: TCP
            targetPort: 8080
        -   name: gRPC
            port: 8888
            protocol: TCP
            targetPort: 8888
