k8s/platforms-np-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: platform-np-service
spec:
    type: NodePort
    selector:
        app: platforms-service
    ports:
        -   protocol: TCP
            port: 80
            targetPort: 8080
