k8s/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq-depl
    labels:
        app: rabbitmq-depl
spec:
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                -   name: rabbitmq
                    image: rabbitmq:3-management-alpine
                    ports:
                        -   containerPort: 15672
                            name: rbmq-mgmt-port
                        -   containerPort: 5672
                            name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-cluster-ip-srv
spec:
    type: ClusterIP
    selector:
        app: rabbitmq
    ports:
        -   name: rbmq-mgmt-port
            port: 15672
            protocol: TCP
            targetPort: 15672
        -   name: rbmq-msg-port
            port: 5672
            protocol: TCP
            targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-load-balancer
spec:
    type: LoadBalancer
    selector:
        app: rabbitmq
    ports:
        -   name: rbmq-mgmt-port
            port: 15672
            protocol: TCP
            targetPort: 15672
        -   name: rbmq-msg-port
            port: 5672
            protocol: TCP
            targetPort: 5672
