k8s/seq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: seq
spec:
    replicas: 1
    selector:
        matchLabels:
            app: seq
    template:
        metadata:
            labels:
                app: seq
        spec:
            containers:
                -   name: seq
                    image: datalust/seq
                    volumeMounts:
                        -   mountPath: /data
                            name: seq-log
            volumes:
                -   name: seq-log
                    persistentVolumeClaim:
                        claimName: seq-claim
---
apiVersion: v1
kind: Service
metadata:
    name: seq-cluster-ip-srv
spec:
    type: ClusterIP
    selector:
        app: seq
    ports:
        -   name: seq-ui
            port: 80
            protocol: TCP
            targetPort: 80
        -   name: seq-reactive
            port: 5341
            protocol: TCP
            targetPort: 5341
---
apiVersion: v1
kind: Service
metadata:
    name: seq-load-balancer
spec:
    type: LoadBalancer
    selector:
        app: seq
    ports:
        -   name: seq-ui
            port: 80
            protocol: TCP
            targetPort: 80
        -   name: seq-reactive
            port: 5341
            protocol: TCP
            targetPort: 5341
