k8s/ingress-nginx-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-nginx-srv
    annotations:
        nginx.ingress.kubernetes.io/user-regex: 'true'
spec:
    ingressClassName: nginx
    rules:
        -   host: microservices-demo.com
            http:
                paths:
                    -   path: /api/platforms
                        pathType: Prefix
                        backend:
                            service:
                                name: platforms-cluster-ip-srv
                                port:
                                    name: "restful"
                    
                    -   path: /api/c
                        pathType: Prefix
                        backend:
                            service:
                                name: commands-cluster-ip-srv
                                port:
                                    name: "restful"
        
        -   host: microservices-demo-seq.com
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: seq-cluster-ip-srv
                                port:
                                    name: "seq-ui"
