k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        nginx.ingress.kubernetes.io/user-regex: 'true'
spec:
    ingressClassName: nginx
    rules:
        -   host: microservices-demo.com
            http:
                paths:
                    -   path: /api/platforms
                        pathType: Prefix
                        backend:
                            service:
                                name: platforms-cluster-ip-service
                                port:
                                    number: 8080
                    
                    -   path: /api/commands
                        pathType: Prefix
                        backend:
                            service:
                                name: commands-cluster-ip-service
                                port:
                                    number: 8080
